slider be auto, slider btns changed

--- a/index.html
+++ b/index.html
@@ -278,7 +278,11 @@
           </div>
           <div onclick="redwolf()" class="redwolf">
             <img src="img/redwolf_dark.png" alt="" />
-            <span id="redwolf">طراحی و پیاده سازی: گرگ سُرخ</span>
+            <span id="redwolf"
+              ><a href="http://redwolf.ir" target="_blank"
+                >طراحی و پیاده سازی: گرگ سُرخ</a
+              ></span
+            >
           </div>
         </div>
         <!-- container end  -->
