--- a/index-simple.html
+++ b/index-simple.html
@@ -43,7 +43,6 @@
         <div class="slide works">
           <div class="container works_flex">
             <h3>آپارتمان مُدرن</h3>
-
             <div
               class="carousel container"
               data-flickity='{ "freeScroll": true, "autoPlay": true, "wrapAround": true }'
@@ -52,7 +51,7 @@
                 <a
                   href="img/Apartment/abolfazlsrz011.jpg"
                   data-lightbox="image-1"
-                  data-title="abolak kasif"
+                  data-title="آپارتمان مدرن و زیبا"
                   data-lightbox="roadtrip"
                   ><img src="img/Apartment/abolfazlsrz011.jpg" alt=""
                 /></a>
@@ -61,7 +60,7 @@
                 <a
                   href="img/Apartment/abolfazlsrz012.jpg"
                   data-lightbox="image-1"
-                  data-title="abolak kasif"
+                  data-title="آپارتمان مدرن و زیبا"
                   data-lightbox="roadtrip"
                   ><img src="img/Apartment/abolfazlsrz012.jpg" alt=""
                 /></a>
@@ -70,7 +69,7 @@
                 <a
                   href="img/Apartment/abolfazlsrz013.jpg"
                   data-lightbox="image-1"
-                  data-title="abolak kasif"
+                  data-title="آپارتمان مدرن و زیبا"
                   data-lightbox="roadtrip"
                   ><img src="img/Apartment/abolfazlsrz013.jpg" alt=""
                 /></a>
@@ -79,7 +78,7 @@
                 <a
                   href="img/Apartment/abolfazlsrz014.jpg"
                   data-lightbox="image-1"
-                  data-title="abolak kasif"
+                  data-title="آپارتمان مدرن و زیبا"
                   data-lightbox="roadtrip"
                   ><img src="img/Apartment/abolfazlsrz014.jpg" alt=""
                 /></a>
@@ -88,13 +87,12 @@
                 <a
                   href="img/Apartment/abolfazlsrz15.jpg"
                   data-lightbox="image-1"
-                  data-title="abolak kasif"
+                  data-title="آپارتمان مدرن و زیبا"
                   data-lightbox="roadtrip"
                   ><img src="img/Apartment/abolfazlsrz15.jpg" alt=""
                 /></a>
               </div>
             </div>
-
             <div
               class="img_works"
               style="background-image: url('img/Apartment/abolfazlsrz013.jpg')"
@@ -104,7 +102,6 @@
         <div id="first_work" class="slide works">
           <div class="container works_flex">
             <h3>دخترک پیانیست</h3>
-
             <div
               class="carousel container"
               data-flickity='{ "freeScroll": true, "autoPlay": true, "wrapAround": true }'
@@ -113,7 +110,7 @@
                 <a
                   href="img/Piano/abolfazlsrz 1.jpg"
                   data-lightbox="image-1"
-                  data-title="abolak kasif"
+                  data-title="دخترک پیانیست"
                   data-lightbox="roadtrip"
                   ><img src="img/Piano/abolfazlsrz 1.jpg" alt=""
                 /></a>
@@ -122,7 +119,7 @@
                 <a
                   href="img/Piano/abolfazlsrz28.jpg"
                   data-lightbox="image-1"
-                  data-title="abolak kasif"
+                  data-title="دخترک پیانیست"
                   data-lightbox="roadtrip"
                   ><img src="img/Piano/abolfazlsrz28.jpg" alt=""
                 /></a>
@@ -131,13 +128,12 @@
                 <a
                   href="img/Piano/abolfazlsrz38.jpg"
                   data-lightbox="image-1"
-                  data-title="abolak kasif"
+                  data-title="دخترک پیانیست"
                   data-lightbox="roadtrip"
                   ><img src="img/Piano/abolfazlsrz38.jpg" alt=""
                 /></a>
               </div>
             </div>
-
             <div
               class="img_works"
               style="background-image: url('img/Piano/abolfazlsrz38.jpg')"
@@ -147,7 +143,6 @@
         <div id="first_work" class="slide works">
           <div class="container works_flex">
             <h3>بوی باغ شمال</h3>
-
             <div
               class="carousel container"
               data-flickity='{ "freeScroll": true, "autoPlay": true, "wrapAround": true }'
@@ -156,7 +151,7 @@
                 <a
                   href="img/North/final abolfazlsrz111.jpg"
                   data-lightbox="image-1"
-                  data-title="abolak kasif"
+                  data-title="سِرِه"
                   data-lightbox="roadtrip"
                   ><img src="img/North/final abolfazlsrz111.jpg" alt=""
                 /></a>
@@ -165,7 +160,7 @@
                 <a
                   href="img/North/final abolfazlsrz222.jpg"
                   data-lightbox="image-1"
-                  data-title="abolak kasif"
+                  data-title="سِرِه"
                   data-lightbox="roadtrip"
                   ><img src="img/North/final abolfazlsrz222.jpg" alt=""
                 /></a>
@@ -174,24 +169,21 @@
                 <a
                   href="img/North/final abolfazlsrz333.jpg"
                   data-lightbox="image-1"
-                  data-title="abolak kasif"
+                  data-title="سِرِه"
                   data-lightbox="roadtrip"
                   ><img src="img/North/final abolfazlsrz333.jpg" alt=""
                 /></a>
               </div>
             </div>
-
             <div
               class="img_works"
-              style="background-image: url('img/final\ abolfazlsrz111.jpg')"
+              style="background-image: url('img/final abolfazlsrz111.jpg')"
             ></div>
           </div>
         </div>
-        <!-- last -->
         <div id="first_work" class="slide works">
           <div class="container works_flex">
             <h3>گزیده دیگر کارها</h3>
-
             <div
               class="carousel container"
               data-flickity='{ "freeScroll": true, "autoPlay": true, "wrapAround": true }'
@@ -200,7 +192,7 @@
                 <a
                   href="img/Rome/abolfazlsrz 0188.jpg"
                   data-lightbox="image-1"
-                  data-title="abolak kasif"
+                  data-title="گزیده کارها"
                   data-lightbox="roadtrip"
                   ><img src="img/Rome/abolfazlsrz 0188.jpg" alt=""
                 /></a>
@@ -209,7 +201,7 @@
                 <a
                   href="img/Rome/abolfazlsrz288.jpg"
                   data-lightbox="image-1"
-                  data-title="abolak kasif"
+                  data-title="گزیده کارها"
                   data-lightbox="roadtrip"
                   ><img src="img/Rome/abolfazlsrz288.jpg" alt=""
                 /></a>
@@ -218,13 +210,12 @@
                 <a
                   href="img/Piano/abolfazlsrz38.jpg"
                   data-lightbox="image-1"
-                  data-title="abolak kasif"
+                  data-title="گزیده کارها"
                   data-lightbox="roadtrip"
                   ><img src="img/Piano/abolfazlsrz38.jpg" alt=""
                 /></a>
               </div>
             </div>
-
             <div
               class="img_works"
               style="background-image: url('img/Piano/abolfazlsrz38.jpg')"
@@ -290,13 +281,8 @@
             >
           </div>
         </div>
-        <!-- container end  -->
       </div>
     </div>
-    <!-- <div class="loader-wrapper">
-      <span class="loader"><span class="loader-inner"></span></span>
-    </div> -->
-
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"
